Version 0.7.2 (2013-01-XX)
--------------------------
JS tracker: bumped to 0.10.0
JS tracker: updated copyright notices - TODO
JS tracker: removed deprecated getAccount(), getTracker(), setHeartBeatTimer() - BREAKING CHANGE (#86)
JS tracker: added document charset to querystring (#138)
JS tracker: page ping no longer killed by 1 heartbeat w/o activity (#132)
JS tracker: added document & viewport dimensions (#94)
JS tracker: introduced trackStructEvent and deprecated trackEvent (#143)
JS tracker: added enableDarkSocial() to set utm_share (#130) - TODO
JS tracker: added scroll offsets to page ping (#127) - TODO
Serde: bumped to 0.5.4 - TODO
Serde: updated copyright notices - TODO
Serde: added extraction of doc charset (#138) - TODO
Serde: added extraction of URL components (#105) - TODO
Serde: added extraction of document & viewport dimensions (#94) - TODO
Serde: added extraction of utm_share (#130) - TODO
Serde: added extraction of scroll offsets for enhanced page ping (#127) - TODO
HiveQL: hive-rolling-etl.q bumped to 0.5.4 - TODO
HiveQL: non-hive-rolling-etl.q bumped to 0.0.5 - TODO
HiveQL: updated copyright notices - TODO
HiveQL: now supports charset, document & viewport, utm_share, URL components and enhanced page ping - TODO
Infobright: bumped setup_infobright.sql to 0.0.6 - TODO
Infobright: updated copyright notices - TODO
Infobright: added migration scripts (0.0.4; 0.0.5 -> 0.0.6) - TODO
Infobright: added charset, document & viewport, utm_share, URL components and enhanced page ping - TODO

Version 0.7.1 (2013-01-22)
--------------------------
EmrEtlRunner: bumped to 0.0.8
EmrEtlRunner: updated copyright notices
EmrEtlRunner: added .rvmrc file (part of #121, #84)
EmrEtlRunner: removed .gemspec file
EmrEtlRunner: added dependencies to Gemfile and re-generated Gemfile.lock
StorageLoader: bumped to 0.0.4
StorageLoader: updated copyright notices
StorageLoader: added .rvmrc file (part of #121, #84)
StorageLoader: removed .gemspec file