@@ -2,7 +2,7 @@
  * JavaScript tracker for SnowPlow: helpers.js
  * 
  * Significant portions copyright 2010 Anthon Pang. Remainder copyright 
- * 2012 SnowPlow Analytics Ltd. All rights reserved. 
+ * 2012-2013 SnowPlow Analytics Ltd. All rights reserved. 
  * 
  * Redistribution and use in source and binary forms, with or without 
  * modification, are permitted provided that the following conditions are 
