@@ -2,7 +2,7 @@
  * JavaScript tracker for SnowPlow: snowplow.js
  * 
  * Significant portions copyright 2010 Anthon Pang. Remainder copyright 
- * 2012 SnowPlow Analytics Ltd. All rights reserved. 
+ * 2012-2013 SnowPlow Analytics Ltd. All rights reserved. 
  * 
  * Redistribution and use in source and binary forms, with or without 
  * modification, are permitted provided that the following conditions are 
@@ -64,7 +64,8 @@
 	setVisitorCookieTimeout, setSessionCookieTimeout, setReferralCookieTimeout,
 	doNotTrack, setDoNotTrack, msDoNotTrack,
 	detectTimezone, detectViewport,
-	addListener, enableLinkTracking, setLinkTrackingTimer,
+	addListener, enableLinkTracking, enableActivityTracking, setLinkTrackingTimer,
+	enableDarkSocialTracking,
 	killFrame, redirectFile, setCountPreRendered,
 	trackEvent, trackLink, trackPageView, trackImpression,
 	addPlugin, getAsyncTracker
